# Patrakaarita

./: .env  .gitignore  README.md  agents.py  crew.py  pyproject.toml  requirements.txt  streamlit_app.py  tasks.py  tools.py  web.py
output/: report.txt
static/: style.css
templates/: index.html
